--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,16 @@ body {
     text-decoration: none;
     background: #4aaaa5;
   }
+
+  /* #footer1 {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  } */
   
   /* nav {
     float: right;
@@ -120,7 +130,7 @@ body {
   /* main */
   
   #main-container {
-    padding-top: 130px;
+    padding-top: 50px;
     min-height: calc(100vh - 70px);
   }
   
@@ -173,7 +183,8 @@ body {
     width: 200px;
     height: auto;
     margin-top: 10px;
-    margin-right: 25px;
+    margin-right: 15px;
+    margin-left: 10px;
   }
   
   /* contact page */
@@ -215,9 +226,69 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
-  
-/* @include media-breakpoint-down(xs) { ... }
-@include media-breakpoint-down(sm) { ... }
-@include media-breakpoint-down(md) { ... }
 
-@media (max-width: 575.98px) { ... } */
+  #text {
+    background-color: white;
+    margin-top: 50px;
+  }
+
+  .navbar {
+    display: flex;
+    width: 100%;
+  }
+
+  /* #text2 {
+    float: left;
+  } */
+/* look up: toggle menu items */
+
+@media (max-width: 640px) {
+  #text { 
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  #text2 {
+    padding-left: 15px;
+  }
+  .auth-image {
+    width: 90%;
+    padding-bottom: 20px;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .navbar1 {
+    width: 100%;
+  }
+  #text { 
+    margin-left: 20px;
+  }
+  #text2 {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .auth-image {
+    width: 90%;
+    padding-bottom: 20px;
+  }
+}
+ 
+
+
+@media screen and (max-width: 980px) {
+  .navbar1 {
+    width: 100%;
+  }
+  
+  #text { 
+    margin-left: 20px;
+  }
+  #text2 {
+    padding-left: 15px;
+  }
+  .auth-image {
+    width: 90%;
+    padding-bottom: 20px;
+  }
+}
