--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-body {
+ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
@@ -12,7 +12,7 @@ body {
   
   /* general */
   
-  .container {
+  /* .container {
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
@@ -52,7 +52,7 @@ body {
   
   /* header */
   
-  #masthead {
+  /* #masthead {
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -75,7 +75,7 @@ body {
     text-align: center;
     text-decoration: none;
     background: #4aaaa5;
-  }
+  } */ 
 
   /* #footer1 {
     position: fixed;
@@ -119,17 +119,17 @@ body {
     border-top: 8px solid #4aaaa5;
     height: 50px;
   }
-  
+  /*
   h3, h2 {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid #eeeeee;
+    border-bottom: 2px solid #eeeeee; 
   }
   
   /* main */
   
-  #main-container {
+  /* #main-container {
     padding-top: 50px;
     min-height: calc(100vh - 70px);
   }
@@ -142,18 +142,33 @@ body {
     margin: 0 0 40px;
     background: #ffffff;
     border: 1px solid #dddddd;
-  }
+  } */
   
   /* portfolio page */
-  
+/*   
   .work {
     position: relative;
     float: left;
-    width: 274px;
+    width: 40px;
     margin: 20px 0 25px;
     overflow: auto;
+  } */
+
+  .work {
+    margin: 20px;
   }
-  
+  .image {
+    border: black 1px solid;
+    width: 400px;
+    height: 300px;
+  }
+
+  #contact-form {
+    background: white;
+    margin: 20px;
+    padding:20px;
+  }
+  /*
   .work:nth-child(even) {
     margin-right: 40px;
   }
@@ -176,7 +191,7 @@ body {
     text-align: center;
     background: #4aaaa5;
     border-bottom: 0;
-  }
+  } */
   
   .auth-image {
     float: left;
@@ -186,10 +201,10 @@ body {
     margin-right: 15px;
     margin-left: 10px;
   }
-  
+   
   /* contact page */
   
-  #contact-form ul {
+  /* #contact-form ul {
     margin-bottom: 20px;
   }
   
@@ -243,13 +258,13 @@ body {
   .auth-image {
     width: 90%;
     padding-bottom: 20px;
-  }
+  } */
   /* .media1 {
     height: 230px;
     flex-direction: column;
     text-align: center;
   } */
-}
+/* }
 
 
 @media screen and (max-width: 768px) {
@@ -285,5 +300,5 @@ body {
   .work {
     width: 93%;
 }
-}
-
+} */
+ 
